# yang-xml-gen

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
examples/: demo-ifcfg.json  demo-ifcfg.xml  ietf-interfaces-delete-entry.json  ietf-interfaces-delete-ipv4.json  ietf-interfaces-delete-leaf.json  ietf-interfaces-delete-multiple-entries.json  ietf-interfaces-eth0.yaml  ietf-interfaces-filled.json  ietf-interfaces-get-config-ipv4-subtree.json  ietf-interfaces-get-config-reply.xml  ietf-interfaces-get-config-subtree.json  ietf-interfaces-get-config-with-defaults.json  ietf-interfaces-get-config-xpath.json  ietf-interfaces-template.json  ietf-netconf-get-config.json  ietf-netconf-get-full.json  openconfig-system-get-aaa-all.json  openconfig-system-get-aaa-subtree.json  toaster-config.xml  toaster-config.yaml  toaster-make-toast.json  toaster-reply.xml  toaster-template.json
models/: README.md  example-toaster@2026-07-17.yang
scripts/: compile_models.py
src/yang_xml_gen/: cli.py  loader.py  rpc_worker.py  scaffold.py  schema.py  validator.py  wrappers.py  xml_builder.py  xml_parser.py
tests/: test_choice_rpc.py  test_delete.py  test_filter.py  test_generator.py  test_packaging.py  test_parse.py  test_rpc_worker.py  test_scaffold.py  test_validator.py
